tests/solidity-semantic-tests/out/errors/require_error_evaluation_order_3/C.approval.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_evaluation_order_3.sol.C.approval_program() -> uint64:
main:
    bytecblock "failureMessage"
    txn ApplicationID
    bnz main_after_if_else@2
    bytec_0 // "failureMessage"
    pushbytes "Failure Message"
    app_global_put
    pushint 1
    return

main_after_if_else@2:
    pushint 4096
    bzero
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    pushbytes 0x74c48465 // method "f(bool)void"
    txna ApplicationArgs 0
    match main_f_route@4
    err

main_f_route@4:
    txn OnCompletion
    !
    txn ApplicationID
    &&
    assert
    b f


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_evaluation_order_3.sol.C.f[routing]() -> void:
f:
    txna ApplicationArgs 1
    dup
    len
    pushint 1
    ==
    assert // invalid number of bytes for arc4.bool
    pushint 0
    getbit
    bytec_0 // "failureMessage"
    pushbytes "Intercepted failure message"
    app_global_put
    assert // h
    pushint 1
    return
